Fix spacing of checkboxes with multi-line labels
Fixes #233

--- a/src/scss/modules/_m-schemaform.scss
+++ b/src/scss/modules/_m-schemaform.scss
@@ -231,7 +231,7 @@ label {
 }
 
 .schemaform-first-field {
-  .schemaform-label, > .usa-input-error {
+  > .schemaform-label, > .usa-input-error {
     margin-top: 0;
   }
 }
